--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 db.url=jdbc:mysql://localhost:3306/xml_test
 db.login=root
 db.password=1234
+csv.file=src/main/resources/config/csvAfterXslt.csv
+secondXml.file=src/main/resources/config/xmlAfterXslt.xml
+csvTransform.file=src/main/resources/xslt/csvTransformation.xslt
+firstXml.file=src/main/resources/config/test.xml
+xsltTransform.file=src/main/resources/xslt/xmlTransformation.xslt
+
